# fightnight-fun

./: .gitignore  .gitmodules  block.json  docker-compose.yaml  pnpm-lock.yaml
.circleci/: config.yml
op-geth/: jwt.txt
op-geth/geth/: nodekey
op-node/: .gitignore  genesis.sh  jwt.txt  rollup.json
op-node/rollup/sync/: start.go
op-reth/: jwt.txt
op-supervisor/supervisor/backend/source/: log_processor.go
reth/crates/optimism/node/src/: rpc.rs
world-id-sequencer/: .gitignore  Cargo.toml
world-id-sequencer/src/: main.rs
